@@ -2617,7 +2617,8 @@ class newsManager extends newsLibrary {
             'TXT_NEWS_LASTUPDATE_DESCRIPTION'           => $_ARRAYLANG['TXT_NEWS_LASTUPDATE_DESCRIPTION'],
             'TXT_NEWS_SOURCE_DESCRIPTION'               => $_ARRAYLANG['TXT_NEWS_SOURCE_DESCRIPTION'],
             'TXT_NEWS_IMAGE_DESCRIPTION'                => $_ARRAYLANG['TXT_NEWS_IMAGE_DESCRIPTION'],
-            'TXT_HEADLINE_ID_DESCRIPTION'               => $_ARRAYLANG['TXT_HEADLINE_ID_DESCRIPTION']
+            'TXT_HEADLINE_ID_DESCRIPTION'               => $_ARRAYLANG['TXT_HEADLINE_ID_DESCRIPTION'],
+            'TXT_NEWS_IMAGE_LINK_DESCRIPTION'           => $_ARRAYLANG['TXT_NEWS_IMAGE_LINK_DESCRIPTION']
         ));
     }
 }
